[package]
name = "bimap"
version = "0.2.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
description = "A fast two-way bijective map implementation"
repository = "https://github.com/billyrieger/bimap-rs/"
readme = "README.md"
keywords = ["bijection", "bidirectional", "map", "container", "two-way"]
categories = ["data-structures", "algorithms"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "0.1"
