[package]
name = "bimap"
version = "0.5.0"
authors = ["Billy Rieger <wrieger@protonmail.com>"]
description = "Bijective maps"
repository = "https://github.com/billyrieger/bimap-rs/"
readme = "README.md"
categories = ["data-structures", "no-std"]
license = "Apache-2.0/MIT"
edition = "2018"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

# This ensures that documentation for optional features is on docs.rs.
[package.metadata.docs.rs]
all-features = true
